--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,4 +31,5 @@ dependencies {
     implementation 'com.google.android.gms:play-services-maps:11.8.0'
     implementation 'com.google.gms:google-services:3.1.1'
     implementation 'com.android.volley:volley:1.1.0'
+    implementation 'com.googlecode.json-simple:json-simple:1.1'
 }
