--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,6 +31,8 @@
             android:name=".ForgetPasswordPage"
             android:parentActivityName=".LoginPage" />
         <activity android:name=".ForgetPasswordVerifyPage" />
+        <activity android:name=".ForgetPasswordChangePasswordPage"
+            android:parentActivityName=".LoginPage"/>
         <activity android:name=".showSubsCat"></activity>
     </application>
 
