--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,4 +33,5 @@ dependencies {
     implementation 'com.google.gms:google-services:3.1.1'
     implementation 'com.android.volley:volley:1.1.0'
     implementation 'com.googlecode.json-simple:json-simple:1.1'
+    implementation 'com.squareup.picasso:picasso:2.71828'
 }
