--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,14 @@
 apply plugin: 'com.android.application'
 
 android {
+    signingConfigs {
+        config {
+            keyAlias 'key0'
+            keyPassword '1234321'
+            storeFile file('C:/fypkeystore/fypkeystore.jks')
+            storePassword '1234321'
+        }
+    }
     compileSdkVersion 27
     defaultConfig {
         applicationId "com.example.a16022596.lifespeechkidzo"
@@ -14,6 +22,9 @@ android {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+        }
+        debug {
+            signingConfig signingConfigs.config
         }
     }
     buildToolsVersion '27.0.3'
@@ -31,8 +42,8 @@ dependencies {
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     implementation 'com.google.android.gms:play-services-maps:11.8.0'
     implementation 'com.google.gms:google-services:3.1.1'
-    implementation 'com.android.volley:volley:1.1.0'
+    //    implementation 'com.android.volley:volley:1.1.0'
     implementation 'com.googlecode.json-simple:json-simple:1.1'
     implementation 'com.squareup.picasso:picasso:2.71828'
-
+    implementation 'com.facebook.android:facebook-login:[4,5)'
 }
