--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,17 +32,37 @@
             android:name=".ForgetPasswordChangePasswordPage"
             android:parentActivityName=".LoginPage" />
         <activity android:name=".showSubsCat" />
-        <activity android:name=".Acc_HomePage" />
 
         <meta-data
             android:name="com.google.android.geo.API_KEY"
             android:value="AIzaSyBrHPOlRNQynhxw0OynPVpz0GvIxj4ucoE" />
 
-        <activity android:name=".Acc_ContactPage" />
         <activity android:name=".Acc_ProfilePage" />
         <activity android:name=".LessonActivity" />
         <activity android:name=".SelectQuizDifficulty" />
-        <activity android:name=".QuizActivity"></activity>
+        <activity android:name=".QuizActivity" />
+
+        <meta-data
+            android:name="com.facebook.sdk.ApplicationId"
+            android:value="@string/facebook_app_id" />
+
+        <activity
+            android:name="com.facebook.FacebookActivity"
+            android:configChanges="keyboard|keyboardHidden|screenLayout|screenSize|orientation"
+            android:label="@string/app_name" />
+        <activity
+            android:name="com.facebook.CustomTabActivity"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+
+                <data android:scheme="@string/fb_login_protocol_scheme" />
+            </intent-filter>
+        </activity>
+        <activity android:name=".FacebookUsername"></activity>
     </application>
 
 </manifest>
