--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,7 +42,7 @@ dependencies {
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     implementation 'com.google.android.gms:play-services-maps:11.8.0'
     implementation 'com.google.gms:google-services:3.1.1'
-    //    implementation 'com.android.volley:volley:1.1.0'
+    implementation 'com.android.volley:volley:1.1.0'
     implementation 'com.googlecode.json-simple:json-simple:1.1'
     implementation 'com.squareup.picasso:picasso:2.71828'
     implementation 'com.facebook.android:facebook-login:[4,5)'
