--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,5 +46,7 @@ dependencies {
     implementation 'com.googlecode.json-simple:json-simple:1.1'
     implementation 'com.squareup.picasso:picasso:2.71828'
     implementation 'com.facebook.android:facebook-login:[4,5)'
-    implementation 'com.github.PhilJay:MPAndroidChart:v3.0.2'
+    implementation 'com.github.PhilJay:MPAndroidChart:v3.0.3'
+    implementation 'com.facebook.android:facebook-share:[4,5)'
+//    implementation 'com.facebook.android:facebook-android-sdk:4.23.0'
 }
