--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,14 +31,16 @@
         <activity
             android:name=".ForgetPasswordChangePasswordPage"
             android:parentActivityName=".LoginPage" />
-        <activity android:name=".showSubsCat" />
+        <activity android:name=".showSubsCat"
+            android:parentActivityName=".MainActivity"/>
 
         <meta-data
             android:name="com.google.android.geo.API_KEY"
             android:value="AIzaSyBrHPOlRNQynhxw0OynPVpz0GvIxj4ucoE" />
 
         <activity android:name=".Acc_ProfilePage" />
-        <activity android:name=".LessonActivity" />
+        <activity android:name=".LessonActivity"
+            android:parentActivityName=".showSubsCat"/>
         <activity android:name=".SelectQuizDifficulty" />
         <activity android:name=".QuizActivity" />
 
